--- a/pitch-roulette/src/components/Form/Form.css
+++ b/pitch-roulette/src/components/Form/Form.css
@@ -199,6 +199,8 @@ option {
     font-size: 20px;
     line-height: 136.7%;
     color: #FFFFFF;
+    text-decoration: none;
+    text-align: center;
 }
 
 .form__btn--two{
