--- a/pitch-roulette/src/components/Form/Form.css
+++ b/pitch-roulette/src/components/Form/Form.css
@@ -178,7 +178,7 @@ option {
     border-radius: 20px;
 }
 
-.form__btn-wrapper{
+.form__btn-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -203,11 +203,11 @@ option {
     text-align: center;
 }
 
-.form__btn--two{
+.form__btn--two {
     width: 181px;
 }
 
-.form__btn--transparent{
+.form__btn--transparent {
     background: transparent;
     border: 1px solid #FFFFFF;
 }
@@ -266,7 +266,77 @@ option {
     background: transparent;
 }
 
-.error{
+.error {
     box-shadow: 0 0 5px 5px red;
 }
 
+.wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.dropdown {
+    width: 400px;
+    position: relative;
+    font-family: 'Codec Pro';
+
+}
+
+.dropdown__btn {
+    border: 0;
+    width: 100%;
+    -webkit-appearance: none;
+    appearance: none;
+    font-family: 'Codec Pro';
+    background: #FFFFFF;
+    font-size: 15px;
+    line-height: 136.7%;
+    color: rgba(0, 0, 0, .5);
+    border-radius: 100px;
+    padding: 21px 27px 15px;
+    outline: none;
+    cursor: pointer;
+    user-select: none;
+
+}
+
+.dropdown__btn:after {
+    content: '';
+    display: block;
+    background: url(../../img/arrow.svg) no-repeat center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 20px;
+    width: 10px;
+    height: 10px;
+}
+
+.drobdown__content {
+    position: absolute;
+    top: 110%;
+    padding: 10px;
+    box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
+    color: rgba(0, 0, 0, .5);
+    font-weight: 400;
+    left: 0;
+    right: 0;
+    background: #fff;
+    border-radius: 8px;
+    max-height: 200px;
+    overflow-y: auto;
+    z-index: 100;
+
+
+}
+
+.dropdown__item {
+    padding: 10px;
+    cursor: pointer;
+    transition: all .2s;
+
+}
+
+.dropdown__item:hover {
+    background: #f4f4f4;
+}
