--- a/pitch-roulette/src/components/Form/Form.css
+++ b/pitch-roulette/src/components/Form/Form.css
@@ -340,3 +340,130 @@ option {
 .dropdown__item:hover {
     background: #f4f4f4;
 }
+
+.industries {}
+
+.industries__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 66px;
+    line-height: 108.9%;
+    color: #253138;
+    max-width: 964px;
+    margin: 90px auto 80px;
+    text-align: center;
+}
+
+.industries__wrapper {}
+
+.industries__slider {
+    overflow: hidden;
+
+}
+
+.industries__slide {
+    flex-shrink: 0;
+    width: 100%;
+}
+
+.industries__content {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -7px;
+    margin-right: -7px;
+}
+
+.industries__slider-wr {
+    display: flex;
+    transition: .6s;
+}
+
+.industries__slider-wr--active {
+    transform: translateX(-100%);
+}
+
+.industries__item {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 136.7%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    text-transform: capitalize;
+    color: #253138;
+    border: 3px solid #253138;
+    box-sizing: border-box;
+    border-radius: 100px;
+    width: 298px;
+    max-height: 120px;
+    padding: 50px 59px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    margin: 9px 7px;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.industries__item:hover {
+    background: #253138;
+    color: #fff;
+
+}
+.industries__item--active{
+    background: #253138;
+    color: #fff;
+
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 42px;
+}
+
+.pagination__item {
+    border: 3px solid #253138;
+    box-sizing: border-box;
+    border-radius: 100px;
+    display: inline-block;
+    width: 26px;
+    height: 26px;
+    margin-right: 25px;
+    cursor: pointer;
+}
+
+.pagination__item:last-child {
+    margin-right: 0;
+}
+
+.pagination__item--active {
+    background: #253138;
+}
+
+.industries__confirm {
+    margin-top: 59px;
+    margin-bottom: 67px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.industries__btn {
+    background: #F6483B;
+    border-radius: 100px;
+    padding: 16px 40px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 136.7%;
+    text-align: center;
+    color: #FFFFFF;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    text-decoration: none;
+}
