--- a/pitch-roulette/src/components/Form/Form.css
+++ b/pitch-roulette/src/components/Form/Form.css
@@ -412,7 +412,8 @@ option {
     color: #fff;
 
 }
-.industries__item--active{
+
+.industries__item--active {
     background: #253138;
     color: #fff;
 
@@ -466,4 +467,43 @@ option {
     outline: none;
     cursor: pointer;
     text-decoration: none;
+}
+
+.congratulation {}
+
+.congratulation__img {
+    margin-top: 100px;
+    margin-bottom: 46px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.congratulation__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 66px;
+    line-height: 108.9%;
+    text-align: center;
+    color: #253138;
+    max-width: 763px;
+    margin: 0 auto;
+}
+
+.congratulation__description {
+    max-width: 825px;
+    margin: 49px auto 53px;
+
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 136.7%;
+    text-align: center;
+    color: rgba(37, 49, 56, .5);
+}
+
+.congratulation__btn{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 166px;
 }
