--- a/pitch-roulette/src/DushBoards.css
+++ b/pitch-roulette/src/DushBoards.css
@@ -57,22 +57,22 @@
 }
 
 
-.self {
+.self, .partner {
     width: 49%;
     overflow: hidden;
     position: relative;
 }
 
-.self__content {
+.self__content, .partner__content  {
     width: 100%;
     height: 515px;
 }
 
-.self__stars {
+.self__stars, .partner__stars  {
     margin-right: 8px;
 }
 
-.self__data {
+.self__data, .partner__data  {
     position: absolute;
     top: 31px;
     left: 40px;
@@ -83,25 +83,25 @@
 
 }
 
-.self__column {
+.self__column, .partner__column  {
     display: flex;
 }
 
-.self__image {
+.self__image, .partner__image  {
     margin-right: 13px;
 }
 
-.self__info {
+.self__info, .partner__info  {
     display: flex;
     flex-direction: column;
 }
 
-.self__raiting {
+.self__raiting, .partner__raiting  {
     display: flex;
     align-items: center;
 }
 
-.self__raiting-value {
+.self__raiting-value, .partner__raiting-value {
     font-style: normal;
     font-weight: bold;
     font-size: 13px;
@@ -109,7 +109,7 @@
     color: #FFFFFF;
 }
 
-.self__name {
+.self__name, .partner__name  {
     margin-top: 12px;
     font-style: normal;
     font-weight: bold;
@@ -118,7 +118,7 @@
     color: #FFFFFF;
 }
 
-.self__control{
+.self__control, .partner__control {
     position: absolute;
     left: 0;
     right: 0;
@@ -128,7 +128,7 @@
     justify-content: center;
 }
 
-.self__btn{
+.self__btn, .partner__btn {
     width: 37px;
     height: 37px;
     background: transparent;
@@ -139,9 +139,39 @@
     margin: 0 5px;
 }
 
-.self__settings{
+.self__settings, .partner__add-contact {
     outline: none;
     cursor: pointer;
     border: none;
     background: transparent;
+}
+
+.golive__viewport{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.partner__content{
+    width: 100%;
+    height: 515px;
+}
+
+.golive__control{
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.golive__btn{
+    width: 47px;
+    height: 47px;
+    border-radius: 50%;
+    background: #253138;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin: 0 7px;
 }
