--- a/pitch-roulette/src/DushBoards.css
+++ b/pitch-roulette/src/DushBoards.css
@@ -204,10 +204,10 @@
     border: 4px solid #343434;
     box-sizing: border-box;
     border-radius: 30px;
-    /* overflow: hidden; */
 }
 
-.network__head {
+.network__head,
+.waitlist__head {
     padding: 28px 30px 24px 65px;
     background: #253138;
     border-radius: 20px 20px 0 0;
@@ -216,7 +216,8 @@
 
 }
 
-.network__title {
+.network__title,
+.waitlist__title {
     font-style: normal;
     font-weight: bold;
     font-size: 30px;
@@ -225,7 +226,8 @@
     margin-right: 39px;
 }
 
-.network__connections {
+.network__connections,
+.waitlist__connections {
     font-style: normal;
     font-weight: bold;
     font-size: 30px;
@@ -233,7 +235,8 @@
     color: #F6483B;
 }
 
-.network-list {
+.network-list,
+.waitlist-list {
     padding: 27px 61px 27px 70px;
     display: flex;
     flex-direction: column;
@@ -338,7 +341,7 @@
     margin-right: 42px;
 }
 
-.list-item__control{
+.list-item__control {
     display: flex;
     align-items: center;
     width: 27px;
@@ -359,21 +362,21 @@
     border-radius: 50%;
 }
 
-.list-item__control-wrapper{
+.list-item__control-wrapper {
     position: relative;
 }
 
-.user-control{
+.user-control {
     position: absolute;
     left: 0;
     top: 115%;
 }
 
-.user-control__item{
+.user-control__item {
     margin-bottom: 5px;
 }
 
-.user-control__btn{
+.user-control__btn {
     color: rgba(0, 0, 0, 0.6);
     border-radius: 4px;
     padding: 3px 5px;
@@ -383,3 +386,50 @@
     background-color: #fff;
 
 }
+
+
+.waitlist {
+    border: 4px solid #343434;
+    box-sizing: border-box;
+    border-radius: 30px;
+}
+
+.waitlist__title--15 {
+    margin-right: 15px;
+}
+
+.waitlist__btn-wrapper{
+    flex-grow: 1;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 25px;
+    align-items: center;
+}
+
+.waitlist__btn {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    color: #FFFFFF;
+    flex-grow: 0;
+    width: 139px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 100px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.titles__rating{
+    flex-basis: 20%;
+}
+
+.titles__date{
+    flex-basis: 20%;
+}
+
+.titles__action{}
