--- a/pitch-roulette/src/DushBoards.css
+++ b/pitch-roulette/src/DushBoards.css
@@ -388,11 +388,14 @@
 }
 
 
-.waitlist {
+.waitlist {}
+
+.waitlist__wrapper {
     border: 4px solid #343434;
     box-sizing: border-box;
     border-radius: 30px;
 }
+
 
 .waitlist__title--15 {
     margin-right: 15px;
@@ -448,6 +451,8 @@
 
 .waitlist-list__item .contributor {
     flex-basis: 21%;
+    position: relative;
+
 }
 
 .waitlist-list__item .contributor .contributor__image {
@@ -529,4 +534,26 @@
     font-size: 20px;
     line-height: 136.7%;
     color: rgba(0, 0, 0, 0.6);
+}
+
+.waitlist__footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 29px;
+}
+
+.waitlist__view-all {
+    padding: 13px 33px;
+
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 136.7%;
+    color: #253138;
+
+    border: 2px solid #253138;
+    box-sizing: border-box;
+    border-radius: 100px;
+    background: none;
 }
