--- a/pitch-roulette/src/components/BusinessDushboard/Rating/PitchersRating.css
+++ b/pitch-roulette/src/components/BusinessDushboard/Rating/PitchersRating.css
@@ -6,10 +6,12 @@
     overflow: hidden;
 }
 
-.pitchers-rating__header{
+.pitchers-rating__header {
     display: flex;
-    padding: 27px 57px 19px 73px;
+    padding: 23px 57px 17px 73px;
     background: #253138;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .pitchers-rating__title {
@@ -18,4 +20,138 @@
     font-size: 30px;
     line-height: 136.7%;
     color: #FFFFFF;
+}
+
+
+.pitchers-rating__share {
+    width: 25px;
+    height: 25px;
+    border: none;
+    background: url(../../../img/perfomance/share.svg) center no-repeat;
+    margin-left: 22px;
+}
+
+.pitchers-rating__control {
+    display: flex;
+    align-items: center;
+}
+
+.pitchers-rating__input {
+    padding: 12px 12px 13px 43px;
+    border: 2px solid #FFFFFF;
+    border-radius: 100px;
+    background: transparent;
+    outline: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    color: rgba(255, 255, 255, 0.5);
+    position: relative;
+    width: 195px;
+}
+
+.pitchers-rating__form {
+    position: relative;
+    padding-top: 3px;
+}
+
+.pitchers-rating__form:before {
+    content: '';
+    width: 21px;
+    height: 21px;
+    position: absolute;
+    left: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: url(../../../img/pitchers-rating/find.svg) no-repeat center;
+}
+
+.pitchers-rating__body {}
+
+.pitchers-rating__list {
+    display: flex;
+    flex-direction: column;
+}
+
+.pitchers-rating__item {
+    padding: 35px 105px 27px 75px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+}
+
+.pitchers-rating__item:last-child {
+    border-bottom: none;
+}
+
+.pitchers-rating__item .number {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 136.7%;
+    color: rgba(0, 0, 0, 0.5);
+    margin-right: 32px;
+}
+
+.pitchers-rating__item .avatar {
+    width: 71px;
+    height: 71px;
+    border-radius: 50%;
+    background: #253138;
+    overflow: hidden;
+    margin-right: 37px;
+}
+
+.pitchers-rating__item .industrie {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 136.7%;
+    color: rgba(0, 0, 0, 0.6);
+    flex-basis: 30%;
+}
+
+.pitchers-rating__item .avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.user-data {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-basis: 35.5%;
+}
+
+.user-data__name {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 136.7%;
+    color: #253138;
+    margin-bottom: 4px;
+}
+
+.user-data__waitlisters {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 136.7%;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.pitchers-rating__item .raiting {
+    display: flex;
+    align-items: center;
+}
+
+.pitchers-rating__item .raiting .raiting__value {
+    margin-right: 17px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 136.7%;
+    text-align: right;
+    color: rgba(0, 0, 0, 0.6);
 }
