--- a/pitch-roulette/src/components/BusinessDushboard/Settings/Settings.css
+++ b/pitch-roulette/src/components/BusinessDushboard/Settings/Settings.css
@@ -158,3 +158,30 @@
     color: #FFFFFF;
     padding: 18px 26px;
 }
+
+.settings-form__file .upload{
+    position: relative;
+    background: #253138;
+    border-radius: 100px;
+    border: none;
+}
+
+.settings-form__file .upload .upload__input{
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   cursor: pointer;
+   font-size: 0;
+   opacity: 0;
+}
+
+
+.settings-form__file .upload .upload__text{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    color: #FFFFFF;
+    padding: 18px 26px;
+ }
