--- a/pitch-roulette/src/components/BusinessDushboard/Notifications/Notifications.css
+++ b/pitch-roulette/src/components/BusinessDushboard/Notifications/Notifications.css
@@ -125,10 +125,45 @@
     color: #F6483B;
 }
 
-.notifications__raiting{
+.notifications__raiting {
     flex-basis: 20%;
 }
 
-.notifications__control{
+.notifications__control {
     flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.notifications__decline {
+    border: 1px solid #253138;
+    box-sizing: border-box;
+    border-radius: 100px;
+    padding: 6px 9px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 11px;
+    line-height: 136.7%;
+    color: #253138;
+    background: transparent;
+    margin-right: 3px;
+}
+
+.notifications__accept {
+    padding: 6px 9px;
+    border: 1px solid #F6483B;
+    background: #F6483B;
+    border-radius: 100px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 11px;
+    line-height: 136.7%;
+    color: #ffffff;
+
+}
+
+.notifications__call{
+    border: none;
+    background: transparent;
 }
