--- a/pitch-roulette/src/App.css
+++ b/pitch-roulette/src/App.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Codec Pro News';
-    src: url('./fonts/CodecPro-News.eot');
-    src: url('./fonts/CodecPro-News.eot?#iefix') format('embedded-opentype'),
-        url('./fonts/CodecPro-News.woff2') format('woff2'),
-        url('./fonts/CodecPro-News.woff') format('woff'),
-        url('./fonts/CodecPro-News.ttf') format('truetype');
+    src: url('./styles/fonts/CodecPro-News.eot');
+    src: url('./styles/fonts/CodecPro-News.eot?#iefix') format('embedded-opentype'),
+        url('./styles/fonts/CodecPro-News.woff2') format('woff2'),
+        url('./styles/fonts/CodecPro-News.woff') format('woff'),
+        url('./styles/fonts/CodecPro-News.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -12,11 +12,11 @@
   
 @font-face {
 font-family: 'Codec Pro';
-src: url('./fonts/CodecPro-Bold.eot');
-src: url('./fonts/CodecPro-Bold.eot?#iefix') format('embedded-opentype'),
-    url('./fonts/CodecPro-Bold.woff2') format('woff2'),
-    url('./fonts/CodecPro-Bold.woff') format('woff'),
-    url('./fonts/CodecPro-Bold.ttf') format('truetype');
+src: url('./styles/fonts/CodecPro-Bold.eot');
+src: url('./styles/fonts/CodecPro-Bold.eot?#iefix') format('embedded-opentype'),
+    url('./styles/fonts/CodecPro-Bold.woff2') format('woff2'),
+    url('./styles/fonts/CodecPro-Bold.woff') format('woff'),
+    url('./styles/fonts/CodecPro-Bold.ttf') format('truetype');
 font-weight: 500;
 font-style: normal;
 font-display: swap;
